<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Airplane Mode Toggler</string>
    <string name="toggle_on_label">On</string>
    <string name="toggle_off_label">Off</string>
    <string name="apply_label">Apply</string>
    <string name="duration_label">Duration in minutes:</string>
    <string name="zero">0</string>
    <string name="test_values">Test Values</string>
    <string name="timer">0:00</string>
    <string name="menu_about">About</string>
    <string name="menu_about_message">
        Airplane Mode Toggler
        \n\nA simple application that automatically toggles the on/off state of 
        Airplane mode to preserve battery life.  The duration of each state is set 
        by the user.
        \n\nBy Mattski
        \n\nTested in Android v4.0.3</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="status_label">Airplane Mode Status</string>

</resources>