<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black" >

    <LinearLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_marginTop="44dp"
        android:background="@color/dark_grey" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@android:color/black" >

            <TableRow
                android:id="@+id/tableRow1"
                style="@style/TableRowTheme" >

                <TextView
                    android:id="@+id/durationLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/duration_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                style="@style/TableRowTheme" >

                <TextView
                    android:id="@+id/toggleOnTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/toggle_on_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/onDurationSeekBar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:max="119"
                    android:progress="29" />

                <TextView
                    android:id="@+id/onValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="25dp"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                style="@style/TableRowTheme" >

                <TextView
                    android:id="@+id/toggleOffTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/toggle_off_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/offDurationSeekBar"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:max="4"
                    android:progress="0" />

                <TextView
                    android:id="@+id/offValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="25dp"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/currentTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_below="@+id/statusTextView"
        android:layout_marginTop="18dp"
        android:text="@string/timer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/white"
        android:textOff="@string/disabled"
        android:textOn="@string/enabled" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_below="@+id/tableLayout1"
        android:text="@string/status_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>